--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
+    "dev:all": "concurrently -n \"docker,user,route,gateway\" -c \"blue,green,yellow,magenta\" \"pnpm docker:up\" \"pnpm --filter @vexeviet/user-service dev\" \"pnpm --filter @vexeviet/route-service dev\" \"pnpm --filter @vexeviet/api-gateway dev\"",
+    "dev:services": "concurrently -n \"user,route,gateway\" -c \"green,yellow,magenta\" \"pnpm --filter @vexeviet/user-service dev\" \"pnpm --filter @vexeviet/route-service dev\" \"pnpm --filter @vexeviet/api-gateway dev\"",
     "build": "turbo run build",
     "test": "turbo run test",
     "lint": "turbo run lint",
@@ -22,12 +24,14 @@
     "prisma:migrate": "turbo run prisma:migrate"
   },
   "devDependencies": {
-    "turbo": "^1.11.0",
-    "prettier": "^3.1.0",
-    "typescript": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0"
+    "concurrently": "^9.2.1",
+    "dotenv-cli": "^7.3.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.0",
+    "turbo": "^1.11.0",
+    "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=18.0.0",
