--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,7 +12,11 @@
     "lint": "eslint src --ext .ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "dotenv -e ../../.env -- ts-node prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "dotenv -e ../../.env -- ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0"
@@ -20,6 +24,10 @@
   "devDependencies": {
     "@types/node": "^20.10.5",
     "prisma": "^5.7.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "ts-node": "^10.9.2",
+    "dotenv-cli": "^7.3.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3"
   }
 }
