--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -17,11 +17,15 @@
     "@vexeviet/config": "workspace:*",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/node": "^20.10.5",
     "dotenv-cli": "^7.3.0",
     "ts-node-dev": "^2.0.0",
